Bug 92849 - [IVB HSW BDW] piglit image load/store load-from-cleared-image.shader_test fails
Summary: [IVB HSW BDW] piglit image load/store load-from-cleared-image.shader_test fails
Status: RESOLVED FIXED
Alias: None
Product: Mesa
Classification: Unclassified
Component: Drivers/DRI/i965 (show other bugs)
Version: git
Hardware: Other All
: medium normal
Assignee: Francisco Jerez
QA Contact: Intel 3D Bugs Mailing List
URL:
Whiteboard:
Keywords:
Depends on:
Blocks: 93185
  Show dependency treegraph
 
Reported: 2015-11-06 19:03 UTC by Jordan Justen
Modified: 2015-12-09 23:46 UTC (History)
2 users (show)

See Also:
i915 platform:
i915 features:


Attachments

Description Jordan Justen 2015-11-06 19:03:12 UTC
This new piglit test fails on ivb -> bdw:

commit 8768a12e371d0044b9cf54aa858cfdea3007ebcf
CommitDate: Thu Nov 5 12:53:44 2015 -0800

    ARB_shader_image_load_store: Test loading from a cleared image
Comment 1 Jordan Justen 2015-11-06 19:05:31 UTC
Possible fix in:

http://patchwork.freedesktop.org/patch/61636/
Comment 2 Matt Turner 2015-12-03 18:31:52 UTC
(In reply to Jordan Justen from comment #1)
> Possible fix in:
> 
> http://patchwork.freedesktop.org/patch/61636/

Curro responded to this thread and said he was unable to reproduce and asked for SHAs.
Comment 3 Francisco Jerez 2015-12-09 13:11:45 UTC
Fix pushed as 595c8180714da1d97be445b9a66affa1dfea39f6.
Comment 4 Jordan Justen 2015-12-09 23:46:53 UTC
We want this on the 11.1 branch too.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.